--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,44 +1,44 @@
 * {
-    color: rgb(14, 14, 18);
     font-family: 'Kanit', sans-serif;
 }
 
-body{
-    background-color: rgb(108, 159, 176);
+body {
+    background-color: rgba(18, 17, 20, 0.607);
     position: absolute;
 }
 
 .container {
+    color: rgb(212, 212, 218);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0;
+    position: fixed ;
 }
 
 .imagem-da-forca {
-    border: 2px solid rgb(20, 18, 18);
     margin: 40px;
-   position: relative;
+    position: relative;
 }
 
 .txt-letra {
+    color: rgb(10, 10, 14);
     font-family: 'Kanit', sans-serif;
     width: 5%;
-    padding: 20px;
     margin: 40px;
     align-items: center;
     text-align: center;
-    font-size: 28px;
+    font-size: 25px;
 }
 
 .painel-letras {
-    max-width: 75%;  
+    max-width: 75%;
     text-align: center;
 }
 
-.botoes {
-    padding: 10px; 
+.botoes>button {
+    padding: 10px;
 }
 
 .quadros {
@@ -48,4 +48,3 @@ body{
     align-items: center;
     text-align: center;
 }
-
